--- a/index.html
+++ b/index.html
@@ -8,7 +8,36 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <button class="button">Click me!</button>
+  <div>
+  <div class="container">
+    <button class="button jsModalToggle">Click me!</button>
+    <svg viewbox="0 0 58 66">
+      <use xlink:href="images/sprite.svg#pint-hand" />
+    </svg>
+  </div>
+</div>
+
+  <div class="modal-container">
+    <div class="modal">
+      <button class="modal__close jsModalClose">
+        <svg viewbox="0 0 18 18">
+          <use xlink:href="images/sprite.svg#close" />
+        </svg>
+      </button>
+
+    <div class="modal__content">
+      <h2>Hola</h2>
+      <svg width="112" height="139" viewbox="0 0 112 139">
+        <use xlink:href ="sprite.svg#wavehand" />
+      </svg>
+    </div>
+
+  </div>
+
+</div>
+
+
+  <!-- <button class="button">Click me!</button> -->
   <script src="./js/index.js"></script>
 </body>
 </html>
