--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <button class="button jsModalToggle">Click me!</button>
     <svg viewbox="0 0 58 66">
-      <use xlink:href="images/sprite.svg#pint-hand" />
+      <use xlink:href="images/point-hand.svg" />
     </svg>
   </div>
 </div>
@@ -28,7 +28,7 @@
     <div class="modal__content">
       <h2>Hola</h2>
       <svg width="112" height="139" viewbox="0 0 112 139">
-        <use xlink:href ="sprite.svg#wavehand" />
+        <use xlink:href ="images/wave-hand.svg" />
       </svg>
     </div>
 
